# slack-openai-assistant-py

./: .env.example  .gitignore  README.md  pyproject.toml  slack-api-manifest.yml  watch.sh
app/: __init__.py
